[gd_scene load_steps=3 format=3 uid="uid://dbe7i0duf546i"]

[ext_resource type="Script" uid="uid://e8sde2nguss2" path="res://Scripts/Tables/Scouting.gd" id="1_dw0m1"]
[ext_resource type="PackedScene" uid="uid://cro8j5uk8c1sn" path="res://Scenes/Card.tscn" id="2_dailh"]

[node name="ScoutingTable" type="Node"]
script = ExtResource("1_dw0m1")

[node name="Card1" parent="." instance=ExtResource("2_dailh")]
offset_left = 339.728
offset_top = 275.736
offset_right = 343.12
offset_bottom = 273.208

[node name="Card2" parent="." instance=ExtResource("2_dailh")]
offset_left = 560.728
offset_top = 274.736
offset_right = 562.12
offset_bottom = 272.208

[node name="Card3" parent="." instance=ExtResource("2_dailh")]
offset_left = 780.728
offset_top = 274.736
offset_right = 784.12
offset_bottom = 276.208
